Delete *.pt and add all files

--- a/CLI/config.yaml
+++ b/CLI/config.yaml
@@ -1,9 +1,9 @@
-FILE_DATASET_NAME: TFM_Dataset.csv
+FILE_DATASET_NAME: SBO_dataset.csv
 RANDOM_SEED: 42
 MAX_DATA_LEN: 200
 BATCH_SIZE: 16
-EPOCHS: 3
-NUM_TYPES_CLASSIFICATION_CLASSES: 2
+EPOCHS: 1
+NUM_TYPES_CLASSIFICATION_CLASSES: 1
 DATALOADER_NUM_WORKERS: 1
 TRANSFER_LEARNING: True
 DROP_OUT_BERT: 0.3
